2005-08-24  Li Yuan  <li.yuan@sun.com>

	Fixes #314352.
	* e-table-item.c: (eti_event):
	 if accessibility is enabled, we enable horizontal cusor 
	 movement for line selection.

2005-08-23  Not Zed  <NotZed@Ximian.com>

	* e-table-config.c (setup_fields): fix some missing casts.

2005-08-10  Not Zed  <NotZed@Ximian.com>

	** See bug #313063.

	* e-tree.c (e_tree_class_init): fix the set_scroll_adjustments
	signal to take object, not pointer arguments.  Since glib's
	anality doesn't accept an object pointer as a pointer.  go figure.

2005-07-25  Srinivasa Ragavan <sragavan@novell.com>

	* e-table-config.glade: Added code to use stock icons instead of
	-> and <-

2005-06-23  Kaushal Kumar  <kakumar@novell.com>

	* Makefile.am: Set libetableincludedir to table to match 
	source directory name and fix evolution-exchange build 
	without GAL.

2005-06-01  Kaushal Kumar  <kakumar@novell.com>

	* e-table-item.c (eti_dispose): Don't hide the tooltip if we don't
	have a canvas anymore.
	Patch by: Not Zed

2005-05-20  Li Yuan  <li.yuan@sun.com>

	* e-table-header-item.c:
	* e-table-header-item.h:
	export ethi_change_sort_state, so we can call it in a11y part.
	* e-tree.c: (e_tree_get_header_item):
	* e-tree.h:
	return the header item of e-tree.

	Fix for #302154.

2005-03-14  Theppitak Karoonboonyanan <theppitak@gmail.com>

	* e-cell-text.c (e_cell_text_retrieve_surrounding_cb)
	(e_cell_text_delete_surrounding_cb): selecion fixes for im's.

2005-02-25  Li Yuan  <li.yuan@sun.com>

	Fix for #73009.
	* e-table-config-no-group.glade:
	* e-table-config.glade:

2005-01-27  Harry Lu <harry.lu@sun.com>

	Some code clean work.

	* e-table-click-to-add.c: (etcta_class_init): move a11y registry
	call to a11y code.
	* e-table.c: (e_table_class_init): ditto.
	* e-tree.c: (e_tree_class_init): ditto.

2005-01-27  Li Yuan  <li.yuan@sun.com> 

	* e-cell-combo.c: (e_cell_combo_init), (e_cell_combo_do_popup),
	(e_cell_combo_list_button_press), (e_cell_combo_button_press),