@@ -214,20 +214,20 @@ e_table_specification_load_from_node (ETableSpecification *specification,
 
 	specification->selection_mode = GTK_SELECTION_MULTIPLE;
 	temp = e_xml_get_string_prop_by_name (node, "selection-mode");
-	if (temp && !g_strcasecmp (temp, "single")) {
+	if (temp && !g_ascii_strcasecmp (temp, "single")) {
 		specification->selection_mode = GTK_SELECTION_SINGLE;
-	} else if (temp && !g_strcasecmp (temp, "browse")) {
+	} else if (temp && !g_ascii_strcasecmp (temp, "browse")) {
 		specification->selection_mode = GTK_SELECTION_BROWSE;
-	} else if (temp && !g_strcasecmp (temp, "extended")) {
+	} else if (temp && !g_ascii_strcasecmp (temp, "extended")) {
 		specification->selection_mode = GTK_SELECTION_EXTENDED;
 	}
 	g_free (temp);
 
 	specification->cursor_mode = E_CURSOR_SIMPLE;
 	temp = e_xml_get_string_prop_by_name (node, "cursor-mode");
-	if (temp && !g_strcasecmp (temp, "line")) {
+	if (temp && !g_ascii_strcasecmp (temp, "line")) {
 		specification->cursor_mode = E_CURSOR_LINE;
-	} else 	if (temp && !g_strcasecmp (temp, "spreadsheet")) {
+	} else 	if (temp && !g_ascii_strcasecmp (temp, "spreadsheet")) {
 		specification->cursor_mode = E_CURSOR_SPREADSHEET;
 	}
 	g_free (temp);
